fixed footer out of view bug

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -19,8 +19,11 @@ html {
 
 body {
 	font-family: "Open Sans", sans-serif;
-	margin: 0;
 	font-size: 1.125rem;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	margin: 0;
 }
 
 body.dark-mode {
